----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-05-31 Marc Delisle  <lem9@users.sourceforge.net>
    * header.inc.php: bug #963414, when PropertiesIconic was false,
      the code did not define the icon variables. Also, remove hardcoded
      'Server' string
    * pdf_schema.php: bug #915735, dictionary cropped in landscape letter

2004-05-30 Michal Čihař  <michal@cihar.com>
    * libraries/display_tbl.lib.php: Return back to browsing after editing
      row.

2004-05-29 Marc Delisle  <lem9@users.sourceforge.net>
    * sql.php: bug #956828, deleting last row gives an error. I could not
      find a case where we need the line I just removed, which was
      causing the bug.
    * tbl_properties.inc.php: missing statement group {}, was causing 
      the display of part of the changing amount of columns dialog
      when editing a field structure

2004-05-28 Michal Čihař  <michal@cihar.com>
    * libraries/display_tbl.lib.php: Decrease limit for query truncating (see
      comments in bug #951744).
    * Documentation.html, config.inc.php, tbl_query_box.php: Default query can
      contain field names (RFE #948590, patch #961726).

2004-05-26 Michal Čihař  <michal@cihar.com>
    * lang/norwegian: Update, thanks to Sven-Erik Andersen - sven-erik.
    * lang/estonian: Update thanks to Alvar Soome - finsoft.
    * lang/indonesian: Update thanks to Rachim Tamsjadi - tamsy.
    * lang/dutch: Update thanks to Ivo Teel - calimonk.
    * lang/german-utf-8: Remove duplicated string.
    * lang/*: Remove allow_recoding from non utf-8 translations.
    * tbl_properties.inc.php, tbl_properties_operations.php: PMA_DBI_num_rows
      is not needed and does not work with MYSQL_USE_RESULT (bug #952162).

2004-05-26 Alexander M. Turek  <me@derrabus.de>
    * translators.html: Linked to Indonesian translator's SF page instead of
      his email address.

2004-05-25 Michal Čihař  <michal@cihar.com>